# hw_27

./: conftest.py  db.sqlite3  factories.py  pyproject.toml  pytest.ini
ads/: admin.py  models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_options.py
ads/tests/: tests_ads.py  tests_selections.py
ads/urls/: ad_urls.py  cat_urls.py  selection_urls.py
data/: csv_to_json.py
hw_27/: asgi.py  settings.py  urls.py  wsgi.py
users/: apps.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_first_name.py  0003_alter_location_lat_alter_location_lng_and_more.py  0004_user_age.py
